test-fixtures/machine-dsl-tests/tests/compile_fail/unknown_field_in_guard.rs
use meerkat_machine_dsl::machine;

machine! {
    machine Bad {
        version: 1,
        rust: "test" / "bad",

        state {
            active: bool,
        }

        init(On) {
            active = true,
        }

        terminal []

        phase BadPhase {
            On,
            Off,
        }

        input BadInput {
            Toggle,
        }

        transition ToggleBad {
            on input Toggle
            guard { self.nonexistent_field == true }
            update {}
            to Off
        }
    }
}

fn main() {}
